--- a/src/main/websrc/custom.scss
+++ b/src/main/websrc/custom.scss
@@ -1,28 +1,4 @@
-@charset "utf-8";
-@import 'normalize';
-@import 'variables';
-@import 'icon-font';
-// @import 'rtl'; // uncomment to switch to RTL format
-
-/*
-Copyright 2008-2013 Concur Technologies, Inc.
-
-Licensed under the Apache License, Version 2.0 (the "License"); you may
-not use this file except in compliance with the License. You may obtain
-a copy of the License at
-
-  http://www.apache.org/licenses/LICENSE-2.0
-
-Unless required by applicable law or agreed to in writing, software
-distributed under the License is distributed on an "AS IS" BASIS, WITHOUT
-WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied. See the
-License for the specific language governing permissions and limitations
-under the License.
-*/
-
-////////////////////////////////////////////////////////////////////////////////
-// GENERAL STUFF
-////////////////////////////////////////////////////////////////////////////////
+@import '../webinc/variables';
 
 html, body {
   color: $main-text;
@@ -99,7 +75,6 @@ html, body {
       top: 17px;
       left: $nav-padding;
       color: $nav-text;
-      @extend %icon-search;
     }
   }
 
@@ -482,18 +457,6 @@ html, body {
     vertical-align: middle;
     padding-right: 0.5em;
     font-size: 14px;
-  }
-
-  aside.notice:before {
-    @extend %icon-info-sign;
-  }
-
-  aside.warning:before {
-    @extend %icon-exclamation-sign;
-  }
-
-  aside.success:before {
-    @extend %icon-ok-sign;
   }
 
   .search-highlight {
